Chaged default download link to https://beserver.nanick.org:7777/download_test.bin

--- a/TestLocal.DownloadSpeed/TestLocal.DownloadSpeed.csproj
+++ b/TestLocal.DownloadSpeed/TestLocal.DownloadSpeed.csproj
@@ -20,18 +20,17 @@
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <Platforms>x64</Platforms>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>publish\</PublishUrl>
+    <PublishUrl>C:\Users\nstevens\Desktop\pub\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Unc</InstallFrom>
-    <UpdateEnabled>true</UpdateEnabled>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>\\dev-prod02\c%24\Users\nstevens\source\repos\TestLocal.DownloadSpeed\</InstallUrl>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>7</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
